$Id: History,v 1.38 2002-09-11 12:36:24 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

September 11, 2002  G. Cosmo               geommng-V04-01-00
- G4AssemblyVolume[.hh.icc.cc]:
  o Fixed bug #409 concerning missing imprint counter method.
  o Fixed bug #410 concerning the internal counting mechanism.
    The fix involved the addition of a new data member fAssemblyID,
    holding the instance ID of the given object derived from
    class-wide counter. Corresponding accessor methods has been
    added as well.
- Updated unit test TestAssemblyVolume, to add call to G4RunManager
  for resetting nagivator state in TstVADetectorConstruction.cc.

June 24, 2002  G. Cosmo                    geommng-V04-00-08
- G4AssemblyVolume[.hh.cc]:
  o Moved accessors to assembly counters to public.
  o Added support for user definable count base for generated physical volumes.
  Fixes problem report #382.

June 7, 2002  G. Cosmo                     geommng-V04-00-07
- G4AssemblyVolume[.hh.cc]:
  o Fixed inconsistent handling of input rotation matrices by caching them
    with corresponding deallocation at destruction time.
    Comments updated accordingly with a warning about foreseen changes