@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4PVPlacement.hh,v 1.6 2001-07-11 09:59:17 gunter Exp $
+// $Id: G4PVPlacement.hh,v 1.7 2002-10-14 07:42:25 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -123,6 +123,7 @@ class G4PVPlacement : public G4VPhysicalVolume
 
     virtual G4bool IsMany() const;
     virtual G4bool IsReplicated() const;
+    virtual G4bool IsParameterised() const;
     virtual G4VPVParameterisation* GetParameterisation() const;
     virtual void GetReplicationData(EAxis& axis,
                                    G4int& nReplicas,
